--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tuits</title>
-    <link rel="stylesheet" href="sytles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button id="bNewTweet" class="butotn buttonNew"> New Tweet </button>
+    <button id="bNewTweet" class="button buttonNew"> New Tweet </button>
     <div id="tweets"></div>
-    <script src="app.ts"></script>
+    <script src="app.js"></script>
 </body>
 </html>
